
Changes in existing functions:
  - seqdef(): now accepts to create a state sequence object
    with an alphabet that has only one element. Fixed an error
    that occurred when there was only one state
  - seqformat(): The transformation now stops with an error message
    when the columns referenced with the begin and end
    argument contain a non integer value.

New data examples:
  - bfspell: a small data set with 20 sequences in SPELL format.

Misc:
  - updated seqformat help page: now includes an example of a
    transformation from SPELL to STS.
  - fixed bad use of extern "C" {} in TraMineR.h 
    (done by B. Ripley, CRAN version 1.8-11.1)


## =========
Version 1.8-11

Changes in existing functions:
  - seqmeant(): New serr argument. When serr=TRUE, seqmeant computes
    the variance and standard deviation of the total times spent in the
    different states, and the standard error of the mean total times.
  - seqmtplot(): When serr=TRUE, error bars are displayed in the
    mean time plot.
  - seqdist():
    - New error message when sm=NA with method "OM".
    - New error message when 'refseq' is a state sequence object with
      an alphabet assigned to it different from that of 'seqdata'.

Misc:
  - updated disstreedisplay help page (tree argument).
  - updated seqdist help page (refseq argument and example).
  - updated CITATION file (new ref and fixed a doi argument).

## =========
Version 1.8-10

Misc:
  - Updated help pages: seqeconstraint, seqtree, distree2dot
  - Added required basic packages to the import statements to
    comply with R v3.3 requirements
  - One additional exported alias to a TraMineR internal function:
    TraMineRInternalSeqgbar.


## =========
Version 1.8-9

New function:
  - pcfilter(): convenience function to define the coloring
    filter options to be passed as 'filter' argument to seqpcplot().

Changes in existing functions:
  - seqpm(): New sep argument to allow searching for string patterns when